# AzureNetMap

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: cache.py  config.py  main.py
backend/app/kql/: client.py  models.py  queries.py
backend/app/kql/schema_snapshots/: AZFWApplicationRule.json  AZFWNatRule.json  AZFWNetworkRule.json  NTAIpDetails.json  NTANetAnalytics.json  NTATopologyDetails.json
backend/app/models/: rules.py
backend/app/routes/: changelog.py  dashboard.py  health.py  rules.py  search.py  topology.py  vm.py
backend/app/store/: rule_drafts.py
backend/tests/: test_queries.py  test_routes.py  test_rules.py  test_vm_route.py
docker/: Dockerfile  entrypoint.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CommandPalette.tsx  EdgePopup.tsx  ExportButton.tsx  FilterPanel.tsx  FocusChip.tsx  LeftSidebar.tsx  Legend.tsx  Minimap.tsx  PinnedVMs.tsx  RecentVMs.tsx  SearchBar.tsx  SettingsPopover.tsx  ShortcutDialog.tsx  StatusBar.tsx  TopBar.tsx  TopNav.tsx  TopologyGraph.tsx  VMDetailPanel.tsx  ZoomControls.tsx
frontend/src/hooks/: useFocusMode.ts  useGlobalKeyNav.ts  useKeyboardShortcuts.ts  usePinnedVMs.ts  useRecentVMs.ts  useTopology.ts  useVersionToast.ts
frontend/src/lib/: cytoscape-styles.ts  (+4 more)
nginx/: nginx.conf
scripts/: setup.sh  validate.sh
scripts/systemd/: azurenetmap.service
(+24 files in other folders)
